--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 name = "tokemak-quant-project"
 version = "0.1.0"
 description = ""
-authors = [""]
+authors = ["partidapd@gmail.com"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 web3 = "^5.31.1"
 jupyterlab = "^3.5.0"
 pandas = "^1.5.1"
